tests/integrations/basic-fail/tests/actual_tests/diag_not_found_multiple.stderr
error[E0308]: mismatched types
 --> tests/actual_tests/diag_not_found_multiple.rs:8:9
  |
8 |     add("42", 3);
  |     --- ^^^^ expected `usize`, found `&str`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> tests/actual_tests/diag_not_found_multiple.rs:1:8
  |
1 | pub fn add(left: usize, right: usize) -> usize {
  |        ^^^ -----------

error[E0308]: mismatched types
  --> tests/actual_tests/diag_not_found_multiple.rs:16:13
   |
16 |         add("42", 3); add("42", 3);
   |         --- ^^^^ expected `usize`, found `&str`
   |         |
   |         arguments to this function are incorrect
   |
note: function defined here
  --> tests/actual_tests/diag_not_found_multiple.rs:1:8
   |
1  | pub fn add(left: usize, right: usize) -> usize {
   |        ^^^ -----------

error[E0308]: mismatched types
  --> tests/actual_tests/diag_not_found_multiple.rs:16:27
   |
16 |         add("42", 3); add("42", 3);
   |                       --- ^^^^ expected `usize`, found `&str`
   |                       |
   |                       arguments to this function are incorrect
   |
note: function defined here
  --> tests/actual_tests/diag_not_found_multiple.rs:1:8
   |
1  | pub fn add(left: usize, right: usize) -> usize {
   |        ^^^ -----------

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
